Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjPriIntegerRetboolean.quorum
class Main
    action Main
        Integer one
        one:SetValue(66)
        integer two = 66
        Yoda<Integer, integer, boolean> yoda
        boolean ret = yoda:useForce(one, two)
        output "passed"
     end
end
