Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriObjIntegerRettextFail.quorum
class Main
    action Main
        integer one = 66
        Integer two
        two:SetValue(66)
        Yoda<integer, Integer, text> yoda
        boolean wrongRet = yoda(one, two)
     end
end
